@@ -1,5 +1,14 @@
 2006-08-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* src/thbrk/thbrk.c (+brk_pool_allocator_use,
+	brk_pool_allocator_clear): Guarded the free list with ref count, for
+	thread safety.
+
+	* src/thbrk/thbrk.c (th_brk): Requested to use the break pool
+	allocator at the beginning.
+
+2006-08-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/thbrk/thbrk.c (brk_pool_node_new, brk_pool_free_node):
 	~(Optimization) Kept freed BrkPool nodes for reuse in next allocation, 
 	reducing calls to malloc().
@@ -1024,13 +1033,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.98.2.11 2006-08-29 16:09:01 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.98.2.12 2006-08-29 16:19:14 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.98.2.11 2006-08-29 16:09:01 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.98.2.12 2006-08-29 16:19:14 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
